@@ -12,7 +12,8 @@ tmp_domain(javabridge);
 # connect for users and httpd
 allow httpd_t javabridge_exec_t:file { getattr };
 allow httpd_t javabridge_t:unix_stream_socket { connectto };
-allow user_t javabridge_t:unix_stream_socket { connectto };
+#allow user_t javabridge_t:unix_stream_socket { connectto };
+allow unconfined_t javabridge_t:unix_stream_socket { connectto };
 
 # starting the bridge
 allow javabridge_t bin_t:dir { search };
@@ -21,11 +22,20 @@ allow javabridge_t javabridge_exec_t:file { execute_no_trans };
 allow javabridge_t javabridge_t:file { getattr read };
 allow javabridge_t javabridge_t:unix_stream_socket { accept bind connect create getattr getopt listen read setopt write };
 allow javabridge_t var_log_t:file { append write };
+allow javabridge_t var_log_t:dir { search };
 
 # java needs these for proc/self, /etc/java.
 allow javabridge_t proc_t:file { getattr read };
 allow javabridge_t etc_runtime_t:file { getattr read };
 allow javabridge_t etc_t:file { getattr read };
+allow javabridge_t javabridge_t:process { getsched };
+
+# lib/i386/client/classes.jsa
+allow javabridge_t lib_t:file { execute getattr read };
+
+# /usr/share/java, /usr/lib/rt.jar, ...
+allow javabridge_t usr_t:file { execute getattr read };
+
 
 # Sun JDK 1.5 creates /tmp/hsperfdata/data and executes it.
 # Ugly ...
